[package]
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
description = "SPL Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "lpl-associated-token-account-test"
repository = "https://github.com/gaokanxu/lumos"
version = "0.0.1"

[dependencies]
lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lpl-associated-token-account = { path = "../../associated-token-account/program" }
lpl-token = { path = "../../token/program" }
lpl-token-2022 = { path = "../../token/program-2022" }
