[package]
name = "lpl-associated-token-account"
version = "4.0.0"
description = "Lumos Program Library Associated Token Account"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
assert_matches = "1.5.0"
borsh = { version = "1.5.1", features = ["unstable__schema"] } 
thiserror = "1.0.57"
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }

lumos-program = { path = "../../../lumos/sdk/program" }
#lpl-token = { workspace = true }
lpl-token-2022 = { path = "../../token/program-2022" }


[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
