[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[dependencies]
thiserror = "1.0.57"
arrayref = "0.3.8"
borsh = { version = "1.5.1", features = ["unstable__schema"] } 
uint = "0.9.5"

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-token = { path = "../../token/program" }

[lib]
crate-type = ["cdylib", "lib"]
