[package]
name = "lpl-binary-oracle-pair"
version = "0.1.0"
description = "Lumos Program Library Binary Oracle Pair"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
thiserror = "1.0.57"
uint = "0.9.5"
borsh = { version = "1.5.1", features = ["unstable__schema"] } 

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lpl-token = { path = "../../token/program" }


[lib]
crate-type = ["cdylib", "lib"]
