[package]
name = "lpl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.15", features = ["cargo"] }

lumos-clap-utils = { path = "../../../lumos/clap-utils" }
lumos-cli-config = { path = "../../../lumos/cli-config" }
#lumos-client = { path = "../../../lumos/client" }
lumos-logger = { path = "../../../lumos/logger" }
#lumos-sdk = { path = "../../../lumos/sdk" }
lpl-feature-proposal = { path = "../../feature-proposal/program" }

[[bin]]
name = "lpl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
