[package]
name = "lpl-governance-addin-api"
version = "0.1.4"
description = "Lumos Program Library Governance Addin Api"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"] } 
lpl-governance-tools = { path = "../tools" }
lumos-program = { path = "../../../lumos/sdk/program" }
