[package]
name = "lpl-governance"
version = "4.0.0"
description = "Lumos Program Library Governance Program"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.8"
bincode = "1.3.3"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
thiserror = "1.0.57"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lpl-token = { path = "../../token/program" }
lpl-governance-tools = { path = "../../governance/tools" }
lpl-governance-addin-api = { path = "../../governance/addin-api" }
#lpl-governance-test-sdk = { path = "../../governance/test-sdk" }
lpl-governance-addin-mock = { path = "../../governance/addin-mock/program" }


[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.22.0"
proptest = "1.4"


[lib]
crate-type = ["cdylib", "lib"]
