[package]
name = "lpl-governance-tools"
version = "0.1.4"
description = "Lumos Program Library Governance Tools"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.8"
bincode = "1.3.3"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
thiserror = "1.0.57"

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-token = { path = "../../token/program" }

