[package]
name = "lpl-instruction-padding"
version = "0.2.0"
description = "Lumos Program Library Instruction Padding Program"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
homepage = "https://lumos.com/"
edition = "2021"

[dependencies]
num_enum = "0.7.2"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
