[package]
name = "lpl-concurrent-merkle-tree"
version = "0.3.0"
description = "Lumos Program Library Concurrent Merkle Tree"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"


[dependencies]
thiserror = "1.0.57"

bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
rand = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand", version = "0.8.5"}
rand_distr = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand_distr",version = "0.4.3" }
tokio = { git = "https://github.com/gaokanxu/tokio.git", branch = "main", package = "tokio" }

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-merkle-tree-reference = { path = "../merkle-tree-reference" } 

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
