[package]
name = "lpl-discriminator"
version = "0.3.0"
description = "Lumos Program Library 8-Byte Discriminator Management"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"], optional = true }
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-discriminator-derive = { version = "0.2.0", path = "./derive" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
