[package]
name = "lpl-math"
version = "0.2.0"
description = "Lumos Program Library Math"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
thiserror = "1.0.57"
uint = "0.9.5"
proptest = "1.4"
libm = "0.2.8"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
