[package]
name = "lpl-pod"
version = "0.3.0"
description = "Lumos Program Library Plain Old Data (Pod)"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[features]
borsh = []
default = ["borsh"]

[dependencies]
base64 = "0.22.0"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
serde = { version = "1.0.204", features = ["derive"] }

bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
bytemuck-derive = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck_derive" }

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-zk-token-sdk = { path = "../../../lumos/zk-token-sdk" }
lpl-program-error = { path = "../program-error" }


[dev-dependencies]
serde_json = "1.0.114"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
