[package]
name = "lpl-program-error"
version = "0.5.0"
description = "Library for Lumos Program error attributes and derive macro for creating them"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk ={ path = "../../../lumos/sdk" }
lpl-program-error-derive = { path = "derive" }


[dev-dependencies]
lazy_static = "1.5"
serial_test = "3.1"


[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
