[package]
name = "lpl-tlv-account-resolution"
version = "0.7.0"
description = "Lumos Program Library TLV Account Resolution Interface"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.29"

bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

lpl-discriminator = { path="../discriminator" }
lpl-program-error = { path = "../program-error" }
lpl-pod = { path = "../pod" }
lpl-type-length-value = { path = "../type-length-value" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
