[package]
name = "lpl-type-length-value-derive-test"
version = "0.1.0"
description = "Testing Derive Macro Library for SPL Type Length Value traits"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"] } 

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-discriminator = { path = "../discriminator" }
lpl-type-length-value = { path = "../type-length-value", features = ["derive"] }
