[package]
name = "lpl-type-length-value"
version = "0.5.0"
description = "Lumos Program Library Type-Length-Value Management"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
derive = ["dep:lpl-type-length-value-derive"]

[dependencies]
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }

lumos-program = { path = "../../../lumos/sdk/program" }
lpl-discriminator = { path = "../discriminator" }
lpl-program-error = { path = "../program-error" }
lpl-type-length-value-derive = { path = "./derive", optional = true }
lpl-pod = { path = "../pod" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
