[package]
name = "lpl-managed-token"
version = "0.1.0"
description = "Lumos Program Library Token Swap"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "lpl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"] }
shank = "0.4.2"
thiserror = "1.0.57"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lpl-associated-token-account =  { path = "../../associated-token-account/program" } 
lpl-token = { path = "../../token/program" } 



