[package]
name = "lpl-memo"
version = "5.0.0"
description = "Lumos Program Library Memo"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
