[package]
name = "lpl-name-service"
description = "Lumos Program Library Name Service"
version = "0.3.0"
repository = "https://github.com/gaokanxu/lumos"
authors = [ "Gao Kanxu <gaokanxu@gmail.com>" ]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num-traits = "0.2"
borsh = { version = "1.5.1", features = ["unstable__schema"] } 
num-derive = "0.4.2"
thiserror = "1.0.63"

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
