[package]
name = "lpl-single-pool-cli"
version = "1.0.0"
description = "Lumos Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = { git = "https://github.com/gaokanxu/tokio.git", branch = "main", package = "tokio" }
clap = { version = "4.5.15", features = ["cargo"] }
console = "0.15.8"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
serde_json = "1.0.114"
serde_with = "2.3.3"
serial_test = "2.0.0"
test-case = "3.3.1"
tempfile = "3.10.1"


#lumos-account-decoder = { path = "../../../lumos/account-decoder" }
lumos-clap-v3-utils = { path = "../../../lumos/clap-v3-utils" }
lumos-cli-config = { path = "../../../lumos/cli-config" }
lumos-cli-output = { path = "../../../lumos/cli-output", optional = true}
lumos-client = { path = "../../../lumos/client" }
lumos-logger = { path = "../../../lumos/logger" }
lumos-remote-wallet = { path = "../../../lumos/remote-wallet" }
lumos-sdk = { path = "../../../lumos/sdk" }
lumos-transaction-status = { path = "../../../lumos/transaction-status" }
lumos-vote-program = { path = "../../../lumos/programs/vote" }

lpl-token = { path = "../../token/program" }
lpl-token-client = { path = "../../token/client" }
lpl-associated-token-account = { path = "../../associated-token-account/program" }
lpl-single-pool = { path = "../../single-pool/program" }


lumos-test-validator = { path = "../../../lumos/test-validator" }

[[bin]]
name = "lpl-single-pool"
path = "src/main.rs"

[features]
default = ["display"]
display = ["lumos-cli-output"]

