[package]
name = "lpl-single-pool"
version = "1.0.1"
description = "Lumos Program Library Single-Validator Stake Pool"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.8"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
num_enum = "0.7.2"
thiserror = "1.0.57"
test-case = "3.3.1"
bincode = "1.3.3"
rand = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand", version = "0.8.5"}
approx = "0.5.1"

security-txt = { git = "https://github.com/gaokanxu/security-txt.git", branch = "main", package = "security-txt" }

lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lumos-vote-program = { path = "../../../lumos/programs/vote" }

lpl-token = { path = "../../token/program" }
lpl-associated-token-account = { path = "../../associated-token-account/program" }

[lib]
crate-type = ["cdylib", "lib"]

