[package]
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.lumos.com/stake-pool"
license = "Apache-2.0"
name = "lpl-stake-pool-cli"
repository = "https://github.com/gaokanxu/lumos"
version = "2.0.0"

[dependencies]
borsh = { version = "1.5.1", features = ["unstable__schema"] }
clap = { version = "4.5.15", features = ["cargo"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
serde_json = "1.0.114"
bs58 = "0.4.0"
bincode = "1.3.3"


lumos-account-decoder = { path = "../../../lumos/account-decoder" }
lumos-clap-utils = { path = "../../../lumos/clap-utils" }
lumos-cli-config = { path = "../../../lumos/cli-config" }
lumos-cli-output = { path = "../../../lumos/cli-output"}
lumos-client = { path = "../../../lumos/client" }
lumos-logger = { path = "../../../lumos/logger" }
lumos-program = { path = "../../../lumos/sdk/program" }
lumos-remote-wallet = { path = "../../../lumos/remote-wallet" }
lumos-sdk = { path = "../../../lumos/sdk" }
lpl-associated-token-account = { path = "../../associated-token-account/program" }
lpl-stake-pool = { path = "../../stake-pool/program" }
lpl-token = { path = "../../token/program" }

[[bin]]
name = "lpl-stake-pool"
path = "src/main.rs"
