[package]
name = "lpl-stake-pool"
version = "2.0.0"
description = "Lumos Program Library Stake Pool"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.8"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
num_enum = "0.7.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
thiserror = "1.0.57"
bincode = "1.3.3"
assert_matches = "1.5.0"
proptest = "1.4"
test-case = "3.3.1"

security-txt = { git = "https://github.com/gaokanxu/security-txt.git", branch = "main", package = "security-txt" }
lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }
lumos-vote-program = { path = "../../../lumos/programs/vote" }

lpl-pod = { path = "../../libraries/pod" }
lpl-token-2022 = { path = "../../token/program-2022" }
lpl-token = { path = "../../token/program" }

[lib]
crate-type = ["cdylib", "lib"]
