[package]
name = "lpl-token-group-example"
version = "0.2.1"
description = "Lumos Program Library Token Group Example"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
lumos-program = { path = "../../../lumos/sdk/program" }
lumos-sdk = { path = "../../../lumos/sdk" }

lpl-pod = { path = "../../libraries/pod" }
lpl-token-2022 = { path = "../../token/program-2022" }
lpl-token-group-interface = { path = "../../token-group/interface" }
lpl-type-length-value = { path = "../../libraries/type-length-value" }
lpl-discriminator = { path = "../../libraries/discriminator" }
lpl-token-client = { path = "../../token/client" }
lpl-token-metadata-interface = { path = "../../token-metadata/interface" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
