[package]
name = "lpl-token-group-interface"
version = "0.3.0"
description = "Lumos Program Library Token Group Interface"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
lumos-program = { path = "../../../lumos/sdk/program" }
lpl-discriminator = { path = "../../libraries/discriminator" }
lpl-pod = { path = "../../libraries/pod" }
lpl-program-error = { path = "../../libraries/program-error" }
lpl-type-length-value = { path = "../../libraries/type-length-value" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
