[package]
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.lumos.com/token-lending"
license = "Apache-2.0"
name = "lpl-token-lending-cli"
repository = "https://github.com/gaokanxu/lumos"
version = "0.2.0"

[dependencies]
clap = { version = "4.5.15", features = ["cargo"] }

lumos-clap-utils = { path = "../../../lumos/clap-utils" }
lumos-cli-config = { path = "../../../lumos/cli-config" }
lumos-client = { path = "../../../lumos/client" }
lumos-logger = { path = "../../../lumos/logger" }
lumos-sdk = { path = "../../../lumos/sdk" }
lumos-program = { path = "../../../lumos/sdk/program" }
lpl-token-lending = { path = "../../token-lending/program" }
lpl-token = { path = "../../token/program" }

[[bin]]
name = "lpl-token-lending"
path = "src/main.rs"
